force-app/main/default/objects/Bedrock_Warranty_Claim__c/Bedrock_Warranty_Claim__c.object-meta.xml
<CustomObject>
    <description>A staged warranty claim. In production this stages to WARRANTY-7 via MuleSoft for service-manager review.</description>
    <label>Bedrock Warranty Claim</label>
    <nameField>
    <displayFormat>BWC-{00000}</displayFormat>
    <label>Claim Number</label>
    <type>AutoNumber</type>
</nameField>
    <pluralLabel>Bedrock Warranty Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>