force-app/main/default/objects/Bedrock_Warranty_Claim__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Bedrock_Asset__c</referenceTo>
    <relationshipLabel>Warranty Claims</relationshipLabel>
    <relationshipName>Warranty_Claims</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>