force-app/main/default/objects/Bedrock_Warranty_Claim__c/fields/Estimated_Cost_USD__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_USD__c</fullName>
    <label>Estimated Cost (USD)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>