force-app/main/default/objects/Bedrock_Warranty_Claim__c/fields/Fault_Code__c.field-meta.xml
<CustomField>
    <fullName>Fault_Code__c</fullName>
    <label>Fault Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>