force-app/main/default/objects/Bedrock_Warranty_Claim__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>