force-app/main/default/objects/Bedrock_Warranty_Claim__c/fields/Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Contract</label>
    <referenceTo>Bedrock_Service_Contract__c</referenceTo>
    <relationshipLabel>Warranty Claims</relationshipLabel>
    <relationshipName>Warranty_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>