force-app/main/default/objects/Bedrock_Warranty_Claim__c/fields/Submitted_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Timestamp__c</fullName>
    <label>Submitted Timestamp</label>
    <type>DateTime</type>
</CustomField>