force-app/main/default/objects/Bedrock_Warranty_Claim__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Claim_Status__c</columns>
    <columns>Asset__c</columns>
    <columns>Service_Contract__c</columns>
    <columns>Fault_Code__c</columns>
    <columns>Estimated_Cost_USD__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>